feat: update docs, update endpoints
