# internal/transport/handlers/authorization/auth.go
@@ -145,7 +145,7 @@ type GetUsersInfoDTO struct {
 // @Failure 400 {object} response.ErrorResponse "Неверный формат запроса"
 // @Failure 404 {object} response.ErrorResponse "Пользователи не найдены"
 // @Failure 500 {object} response.ErrorResponse "Внутренняя ошибка сервера"
-// @Router /users/info [post]
+// @Router /v1/users/info [post]
 func (ah *AuthHandler) GetUsersInfo(w http.ResponseWriter, r *http.Request) {
 	l := logger.FromContext(r.Context())
 
@@ -191,7 +191,7 @@ type UserInfoByLoginDTO struct {
 // @Failure 400 {object} response.ErrorResponse "Логин не передан"
 // @Failure 404 {object} response.ErrorResponse "Пользователь не найден"
 // @Failure 500 {object} response.ErrorResponse "Внутренняя ошибка сервера"
-// @Router /users/{login} [get]
+// @Router /v1/users/{login} [get]
 func (ah *AuthHandler) GetUserInfoByLogin(w http.ResponseWriter, r *http.Request) {
 	l := logger.FromContext(r.Context())
 
